--- a/index.html
+++ b/index.html
@@ -685,7 +685,7 @@
               <div class="shop-card">
 
                 <figure class="card-banner img-holder" style="--width: 300; --height: 260;">
-                  <img src="./images/shop-img-3.png" width="300" height="260" loading="lazy"
+                  <img src="./images/shop-img-3.jpg" width="300" height="260" loading="lazy"
                     alt="GeForce RTX 2070" class="img-cover">
                 </figure>
 
@@ -714,7 +714,7 @@
               <div class="shop-card">
 
                 <figure class="card-banner img-holder" style="--width: 300; --height: 260;">
-                  <img src="./images/shop-img-4.png" width="300" height="260" loading="lazy"
+                  <img src="./images/shop-img-4.jpg" width="300" height="260" loading="lazy"
                     alt="Virtual Reality Smiled" class="img-cover">
                 </figure>
 
